(WIP)fixed text margin overflows

--- a/src/features/pdf-builder/text-editor/editor.css
+++ b/src/features/pdf-builder/text-editor/editor.css
@@ -7,7 +7,13 @@
   background-color: lightgray;
   padding: 1rem;
   border: 1px solid #ccc;
+  overflow: auto;
 }
 .toolbar-class {
   border: 1px solid #ccc;
+}
+.preview {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
 }
